fix: 557 - title wrapping

--- a/src/widgets/numbers/ui/numbers/numbers.module.scss
+++ b/src/widgets/numbers/ui/numbers/numbers.module.scss
@@ -8,6 +8,10 @@
 
   .numbers-title {
     white-space: nowrap;
+
+    @include media-laptop-medium {
+      white-space: normal;
+    }
   }
 
   .numbers-map {
